--- a/.gitignore
+++ b/.gitignore
@@ -6,6 +6,8 @@
 # Node artifact files
 node_modules/
 dist/
+spokeduino mothership/mothership.dist
+spokeduino mothership/mothership.build
 
 # Compiled Java class files
 *.class
